#178 - component page - fix top align, search field and button

--- a/src/app/pages/edit/edit.component.less
+++ b/src/app/pages/edit/edit.component.less
@@ -143,8 +143,9 @@ nz-sider {
   background: @background-white;
   position: sticky;
   top: 64px;
-  height: calc(100vh - 112px);
+  height: fit-content;
   border: solid 1px @border-light;
+  margin-top: @spacing20;
 
   h3 {
     padding: @spacing12;
